--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,6 +42,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border: none;
+    background: white;
 }
 
 .item-svg {
